# vox-golem

./: .gitignore  Cargo.toml  README.md  config.example.toml  package.json  tsconfig.base.json
apps/windows-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-tauri/src-tauri/src/: lib.rs  main.rs  transcription.rs  voice_activity.rs  wake_word.rs
apps/windows-tauri/src-tauri/src/livekit_wakeword/: embedding.rs  melspectrogram.rs  mod.rs  wakeword.rs
crates/audio/: Cargo.toml
crates/audio/src/: buffers.rs  conversion.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  runtime.rs  session.rs  turn_capture.rs  voice_pipeline.rs  voice_turn.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  parakeet.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  llama_cpp.rs  opencode.rs
frontend/app/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
frontend/app/src/: App.css  App.test.tsx  App.tsx  composer.test.ts  index.css  main.tsx  testSetup.ts
frontend/app/src/components/: ChatBubble.tsx
frontend/app/src/lib/: audioCues.test.ts  audioCues.ts  composer.ts  liveAudioSource.test.ts  liveAudioSource.ts  promptExecution.test.ts  promptExecution.ts  runtimeControl.test.ts  runtimeControl.ts  startupState.test.ts  startupState.ts  tauri.ts  voiceActivity.test.ts  voiceActivity.ts  voiceTelemetry.test.ts  voiceTelemetry.ts
frontend/app/src/state/: appShell.test.ts  appShell.ts  runtimeMachine.test.ts  runtimeMachine.ts
frontend/app/src/types/: chat.ts
scripts/: windows-build-exe.sh  windows-verify.cmd  windows-verify.sh
