[package]
name = "vox-golem-windows"
edition.workspace = true
publish = false
build = "build.rs"

[lib]
name = "vox_golem_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
voxgolem-audio = { path = "../../../crates/audio" }
voxgolem-core = { path = "../../../crates/core" }
voxgolem-model = { path = "../../../crates/model" }
voxgolem-platform = { path = "../../../crates/platform" }

[build-dependencies]
tauri-build = { version = "2" }

[lints]
workspace = true
