[package]
name = "vox-golem-windows"
edition.workspace = true
publish = false
build = "build.rs"

[lib]
name = "vox_golem_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rustpotter = "3.0.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
transcribe-rs = { version = "0.3", features = ["onnx"] }
voxgolem-audio = { path = "../../../crates/audio" }
voxgolem-core = { path = "../../../crates/core" }
voxgolem-model = { path = "../../../crates/model" }
voxgolem-platform = { path = "../../../crates/platform" }

[build-dependencies]
tauri-build = { version = "2" }

[dev-dependencies]
hound = "3"
tempfile = "3"

[lints]
workspace = true
