[package]
name = "vox-golem"
edition.workspace = true
publish = false
build = "build.rs"

[lib]
name = "vox_golem_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ndarray = "0.17"
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
rustpotter = "3.0.2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
transcribe-rs = { version = "=0.3.11", features = ["onnx"] }
voxgolem-audio = { path = "../../../crates/audio" }
voxgolem-core = { path = "../../../crates/core" }
voxgolem-model = { path = "../../../crates/model" }
voxgolem-platform = { path = "../../../crates/platform" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
hound = "3"
tempfile = "3"

[lints]
workspace = true
